<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash" >
    
     <com.google.android.gms.ads.AdView android:id="@+id/adView"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         ads:adUnitId="a1531041b3c3f04"
                         ads:adSize="BANNER"/>

    <TableRow
        android:id="@+id/tableRow0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:textStyle="bold" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/black"
            android:textSize="30sp" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <Button
            android:id="@+id/Button1"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/button_submit"
            android:tag="1"
            android:text="@string/_1"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/Button2"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:background="@drawable/button_submit"
            android:tag="2"
            android:text="@string/_2"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/Button3"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:background="@drawable/button_submit"
            android:tag="3"
            android:text="@string/_3"
            android:textSize="30sp"
            android:textStyle="bold" />
    </TableRow>

    <TableRow
        android:id="@+id/TableRow3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="3dp"
        android:layout_weight="1" >

        <Button
            android:id="@+id/Button4"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/button_submit"
            android:tag="4"
            android:text="@string/_4"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/Button5"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:background="@drawable/button_submit"
            android:tag="5"
            android:text="@string/_5"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/Button6"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:background="@drawable/button_submit"
            android:tag="6"
            android:text="@string/_6"
            android:textSize="30sp"
            android:textStyle="bold" />
    </TableRow>

    <TableRow
        android:id="@+id/TableRow4"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="3dp"
        android:layout_weight="1" >

        <Button
            android:id="@+id/Button7"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/button_submit"
            android:tag="7"
            android:text="@string/_7"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/Button8"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:background="@drawable/button_submit"
            android:tag="8"
            android:text="@string/_8"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/Button9"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:background="@drawable/button_submit"
            android:tag="9"
            android:text="@string/_9"
            android:textSize="30sp"
            android:textStyle="bold" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="3dp"
        android:layout_weight="1" >

        <Button
            android:id="@+id/Button_decimal"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/button_submit"
            android:tag="."
            android:text="@string/decimal_button_text"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/Button0"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:background="@drawable/button_submit"
            android:tag="0"
            android:text="@string/_0"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/Button_minus"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:background="@drawable/button_submit"
            android:tag="-"
            android:text="@string/minus_button_text"
            android:textSize="30sp"
            android:textStyle="bold" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp" >

        <Button
            android:id="@+id/Button_clear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_submit"
            android:tag="clear"
            android:text="@string/clear_button_text"
            android:textSize="30sp"
            android:textStyle="bold" />
    </TableRow>

</TableLayout>